--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -9,6 +9,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+      - name: set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
       - name: Install git-crypt
         run: |
             sudo apt-get install gnupg
@@ -16,35 +20,36 @@ jobs:
       - name: Import private GPG key from variable SIGNING_GNUPG_SECRETKEY
         run: |
             gpg --keyserver keyserver.ubuntu.com --recv-keys AD6B952EA698E37BF3E6E0142E34F971E62E12E5
+
+      - name: Import GPG key
+        id: import_gpg
+        uses: crazy-max/ghaction-import-gpg@v4
+        with:
+          gpg_private_key: ${{ secrets.SIGNING_GNUPG_SECRETKEY }}.keys[0]
+          passphrase: ${{ secrets.SIGNING_GNUPG_PASSWORD }}
       - name: List all GPG keys
         run: |
           gpg --list-keys
           gpg --list-secret-keys
-#      - name: Import GPG key
-#        id: import_gpg
-#        uses: crazy-max/ghaction-import-gpg@v4
-#        with:
-#          gpg_private_key: ${{ secrets.SIGNING_GNUPG_SECRETKEY }}.keys[0]
-#          passphrase: ${{ secrets.SIGNING_GNUPG_PASSWORD }}
-      - name: set up JDK 1.8
-        uses: actions/setup-java@v1
-        with:
-          java-version: 1.8
-      - name: build and test Android SDK
-        run: ./gradlew build test --continue --info
+      - name: Add key file to gradle.properties
+        env:
+          GPG_KEY_ID: ${{ secrets.SIGNING_GNUPG_KEYID}}
+          GPG_PRIVATE_KEY: ${{ secrets.SIGNING_GNUPG_SECRETKEY }}
+          GPG_PASSPHRASE: ${{ secrets.SIGNING_GNUPG_PASSWORD }}
+        shell: bash
+        run: |
+          mkdir ~/.gnupg
+          echo $GPG_PRIVATE_KEY >> ~/.gnupg/secring.gpg
+          echo "signing.gnupg.executable=gpu" >> ~/.gnupg/gradle.properties
+          echo "signing.gnupg.useLegacyGpu=true" >> ~/.gnupg/gradle.properties
+          echo "signing.gnupg.keyId=$GPG_KEY_ID" >> ~/.gnupg/gradle.properties
+          echo "signing.gnupg.password=$GPG_PASSPHRASE" >> ~/.gnupg/gradle.properties
+          echo "signing.gnupg.secretKeyRingFile=~/.gnupg/secring.gpg" >> ~/.gnupg/gradle.properties
+          cat ~/.gnupg/gradle.properties
 
-#      - name: Add key file to gradle.properties
-#        env:
-#          GPG_KEY_ID: ${{ secrets.SIGNING_GNUPG_KEYID}}
-#          GPG_PRIVATE_KEY: ${{ secrets.SIGNING_GNUPG_SECRETKEY }}
-#          GPG_PASSPHRASE: ${{ secrets.SIGNING_GNUPG_PASSWORD }}
-#        shell: bash
-#        run:
-#          echo "signing.keyId=$GPG_KEY_ID" >> ./gradle.properties
-#          echo "signing.gnupg.keyId=$GPG_KEY_ID" >> ./gradle.properties
-#          echo "signing.gnupg.password=$GPG_PASSPHRASE" >> ./gradle.properties
-#          echo "signing.gnupg.secretKeyRingFile=$GPG_PRIVATE_KEY" >> ./gradle.properties
-#          cat ./gradle.properties
+#      - name: build and test Android SDK
+#        run: ./gradlew build test --continue --info
+
 #      - name: Publish to Nexus repository
 #        run: ./gradlew uploadArchive
 #        env:
