--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -17,9 +17,10 @@ jobs:
         run: |
             sudo apt-get install gnupg2
             gpg2 --list-keys
-      - name: Import private GPG key from variable SIGNING_GNUPG_SECRETKEY
+      - name: Import public GPG key
         run: |
             gpg2 --keyserver keyserver.ubuntu.com --recv-keys AD6B952EA698E37BF3E6E0142E34F971E62E12E5
+            gpg2 --list-keys
 
 #      - name: Import GPG key
 #        id: import_gpg
@@ -27,27 +28,32 @@ jobs:
 #        with:
 #          gpg_private_key: ${{ secrets.SIGNING_GNUPG_SECRETKEY }}.keys[0]
 #          passphrase: ${{ secrets.SIGNING_GNUPG_PASSWORD }}
+
+      - name: Import private GPG key from variable GITHUB_SECRETS_PRIVATE_GPG_KEY
+        run: echo "${{ secrets.SIGNING_GNUPG_SECRETKEY }}" | gpg2 --import
+
       - name: List all GPG keys
         run: |
-          gpg2 --list-keys
           gpg2 --list-secret-keys
-      - name: Add key file to gradle.properties
-        env:
-          GPG_KEY_ID: ${{ secrets.SIGNING_GNUPG_KEYID}}
-          GPG_PRIVATE_KEY: ${{ secrets.SIGNING_GNUPG_SECRETKEY }}
-          GPG_PASSPHRASE: ${{ secrets.SIGNING_GNUPG_PASSWORD }}
-        shell: bash
-        run: |
-          echo $GPG_PRIVATE_KEY >> ~/.gnupg/secring.gpg
-          echo "signing.gnupg.executable=gpu" >> ~/.gnupg/gradle.properties
-          echo "signing.gnupg.useLegacyGpu=true" >> ~/.gnupg/gradle.properties
-          echo "signing.gnupg.keyId=$GPG_KEY_ID" >> ~/.gnupg/gradle.properties
-          echo "signing.gnupg.password=$GPG_PASSPHRASE" >> ~/.gnupg/gradle.properties
-          echo "signing.gnupg.secretKeyRingFile=~/.gnupg/secring.gpg" >> ~/.gnupg/gradle.properties
-          cat ~/.gnupg/gradle.properties
 
-      - name: build and test Android SDK
-        run: ./gradlew build test --continue --info
+#      - name: Add key file to gradle.properties
+#        env:
+#          GPG_KEY_ID: ${{ secrets.SIGNING_GNUPG_KEYID}}
+#          GPG_PRIVATE_KEY: ${{ secrets.SIGNING_GNUPG_SECRETKEY }}
+#          GPG_PASSPHRASE: ${{ secrets.SIGNING_GNUPG_PASSWORD }}
+#        shell: bash
+#        run: |
+#          echo $GPG_PRIVATE_KEY >> ~/.gnupg/secring.gpg
+#          cat ~/.gnupg/secring.gpg
+#          echo "signing.gnupg.executable=gpu" >> ~/.gnupg/gradle.properties
+#          echo "signing.gnupg.useLegacyGpu=true" >> ~/.gnupg/gradle.properties
+#          echo "signing.gnupg.keyId=$GPG_KEY_ID" >> ~/.gnupg/gradle.properties
+#          echo "signing.gnupg.password=$GPG_PASSPHRASE" >> ~/.gnupg/gradle.properties
+#          echo "signing.gnupg.secretKeyRingFile=~/.gnupg/secring.gpg" >> ~/.gnupg/gradle.properties
+#          cat ~/.gnupg/gradle.properties
+
+#      - name: build and test Android SDK
+#        run: ./gradlew build test --continue --info
 
 #      - name: Publish to Nexus repository
 #        run: ./gradlew uploadArchive
