--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -30,44 +30,35 @@ jobs:
           gpg_private_key: ${{ secrets.SIGNING_GNUPG_SECRETKEY }}
           passphrase: ${{ secrets.SIGNING_GNUPG_PASSWORD }}
 
-      - name: List all GPG secret keys
+      - name: List all GPG secret keys and test gpg key
         run: |
           gpg --list-secret-keys --keyid-format=long
           touch test.txt
           gpg -ab test.txt
-          gpg --verify test.txt.asc 
+          gpg --verify test.txt.asc
 
+      - name: Restore setting values to gradle.properties
+        env:
+          GPG_KEY_ID: ${{ secrets.SIGNING_GNUPG_KEYID }}
+          GPG_HOMEDIR: ${{ secrets.SIGNING_GNUPG_HOMEDIR }}
+          GPG_PASSPHRASE: ${{ secrets.SIGNING_GNUPG_PASSWORD }}
+          MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
+          MAVEN_PASSWORD: ${{ secrets.OSSRH_TOKEN }}
+        shell: bash
+        run: |
+          echo "signing.gnupg.executable=gpg" >> ./gradle.properties
+          echo "signing.gnupg.useLegacyGpg=true" >> ./gradle.properties
+          echo "signing.gnupg.homeDir=$GPG_HOMEDIR" >> ./gradle.properties
+          echo "signing.gnupg.keyId=$GPG_KEY_ID" >> ./gradle.properties
+          echo "signing.gnupg.password=$GPG_PASSPHRASE" >> ./gradle.properties
+          echo "ossrhUsername=$MAVEN_USERNAME" >> ./gradle.properties
+          echo "ossrhPassword=$MAVEN_PASSWORD" >> ./gradle.properties
+          cat ./gradle.properties
 
-#      - name: Add key file to gradle.properties
-#        env:
-#          GPG_KEY_ID: ${{ secrets.SIGNING_GNUPG_KEYID}}
-#          GPG_PRIVATE_KEY: ${{ secrets.SIGNING_GNUPG_SECRETKEY }}
-#          GPG_PASSPHRASE: ${{ secrets.SIGNING_GNUPG_PASSWORD }}
-#        shell: bash
-#        run: |
-#          echo $GPG_PRIVATE_KEY >> ~/.gnupg/secring.gpg
-#          cat ~/.gnupg/secring.gpg
-#          echo "signing.gnupg.executable=gpu" >> ~/.gnupg/gradle.properties
-#          echo "signing.gnupg.useLegacyGpu=true" >> ~/.gnupg/gradle.properties
-#          echo "signing.gnupg.keyId=$GPG_KEY_ID" >> ~/.gnupg/gradle.properties
-#          echo "signing.gnupg.password=$GPG_PASSPHRASE" >> ~/.gnupg/gradle.properties
-#          echo "signing.gnupg.secretKeyRingFile=~/.gnupg/secring.gpg" >> ~/.gnupg/gradle.properties
-#          cat ~/.gnupg/gradle.properties
-
-#      - name: build and test Android SDK
-#        run: ./gradlew build test --continue --info
+      - name: build and test Android SDK
+        run: ./gradlew build test --continue --info
 
 #      - name: Publish to Nexus repository
 #        run: ./gradlew uploadArchive
-#        env:
-#          GPG_KEY_ID: ${{ secrets.SIGNING_GNUPG_KEYID}}
-#          GPG_PRIVATE_KEY: ${{ secrets.SIGNING_GNUPG_SECRETKEY }}
-#          GPG_PASSPHRASE: ${{ secrets.SIGNING_GNUPG_PASSWORD }}
-#          MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
-#          MAVEN_PASSWORD: ${{ secrets.OSSRH_TOKEN }}
-#          MAVEN_GPG_PASSPHRASE: ${{ secrets.SIGNING_GNUPG_PASSWORD }}
-#          server-id: ossrh
-#          server-username: ${{ secrets.OSSRH_USERNAME }}
-#          server-password: ${{ secrets.OSSRH_TOKEN }}
-#          gpg-private-key: ${{ secrets.SIGNING_GNUPG_SECRETKEY }}
-#          gpg-passphrase: ${{ secrets.SIGNING_GNUPG_PASSWORD }}
+
+
