--- a/build.gradle
+++ b/build.gradle
@@ -123,7 +123,7 @@ artifacts {
 
 signing {
     useGpgCmd()
-    required { gradle.taskGraph.hasTask("uploadArchives") }
+    //required { gradle.taskGraph.hasTask("uploadArchives") }
     sign configurations.archives
 }
 
@@ -133,11 +133,11 @@ uploadArchives{
             beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
 
             repository(url: "https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/") {
-                authentication(userName: System.getenv("MAVEN_USERNAME"), password: System.getenv("MAVEN_PASSWORD"))
+                authentication(userName: ossrhUsername, password: ossrhPassword)
             }
 
             snapshotRepository(url: "https://s01.oss.sonatype.org/content/repositories/snapshots/") {
-                authentication(userName: System.getenv("MAVEN_USERNAME"), password: System.getenv("MAVEN_PASSWORD"))
+                authentication(userName: ossrhUsername, password: ossrhPassword)
             }
 
             pom.project {
